# arag-tech-interview

./: .gitignore  IMPLEMENTATION_PLAN.md  PROPOSAL.md  PROPOSAL_SLIDE.md  README.md  REVIEW_1.md  REVIEW_2.md  pyproject.toml
configs/: default.yaml  evaluation.yaml
data/kb/: concepts.json
scripts/: run_baseline.py  run_evaluation.py  run_interview.py  seed_kb.py
src/: config.py  models.py
src/agents/: dma.py  fsa.py  kgda.py  qga.py  raa.py
src/baseline/: no_raa_ground.py
src/baselines/ablations/: no_kgda.py  no_rag_agents.py
src/evaluation/: metrics.py  ragas_adapter.py  report.py  runner.py
src/graph/: builder.py  nodes.py  state.py
src/kb/: loader.py  retriever.py  schema.py
src/prompts/: dma_prompts.py  fsa_prompts.py  kgda_prompts.py  qga_prompts.py  raa_prompts.py
src/simulation/: candidate.py  personas.py
tests/: conftest.py
tests/evaluation/: test_metrics.py
tests/integration/: test_graph_flow.py  test_kb_chroma.py
tests/unit/: test_dma.py  test_external_baselines.py  test_fsa.py  test_kb_retriever.py  test_kb_schema.py  test_kgda.py  test_qga.py  test_raa.py  test_state.py
